--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -15,5 +15,5 @@ $fuchsia: #f012be;
 $purple: #b10dc9;
 $maroon: #85144b;
 $white: #fff;
-$silver: #ddd;
+$silver: #eee;
 $black: #111;
